scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/importTag12.errors.txt
/foo.js(3,2): error TS1109: Expression expected.


==== /foo.js (1 errors) ====
    /**
     * @import foo from
     */
     
!!! error TS1109: Expression expected.
    